# Somnium

./: .gitignore  Cargo - 副本.toml  Cargo.toml  README.md  build.rs  launcher_config.toml  豁免报错.txt
Docs/: Architecture.md  Launcher_Design.md  Launcher_Integration_Spec.md  Launcher_Spec.md  Plugin_Development.md  Plugin_Development_Guide.md
assets/plugins/modeling/: sdf.wgsl
launcher/: Cargo.toml  launcher_config.toml
launcher/src/: main.rs
src/: app.rs  lib.rs  main.rs
src/plugins/: Gemini CLI 报错.txt  core.rs  generated.rs
src/plugins/code_editor/: mod.rs  plugin.toml
src/plugins/file_manager/: mod.rs  plugin.toml
src/plugins/manager/: plugin.toml
src/plugins/modeling/: mod.rs  plugin.toml
src/plugins/terminal/: mod.rs  plugin.toml
src/plugins/test_plugin/: mod.rs  plugin.toml
