[package]
name = "verbium"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "bevy_window",
    "bevy_pbr",
    "bevy_asset",
    "x11",
    "multi_threaded",
    "tonemapping_luts",
    "default_font",
    "webgpu",
    "zstd_rust",
] }
bevy_egui = "0.38"
egui = "0.33"
egui_dock = "0.18"

# --- BEGIN PLUGIN DEPENDENCIES ---
# From manager & terminal
anyhow = "1.0"
# From code_editor
egui_extras = { features = ["syntect"], version = "0.33" }
# From terminal
parking_lot = "0.12"
# From terminal
portable-pty = "0.8"
# From code_editor & file_manager & manager
rfd = "0.14"
# From manager
serde = { features = ["derive"], version = "1.0" }
# From manager
toml = "0.8"
# From manager
toml_edit = "0.22"
# From terminal
unicode-width = "0.1"
# From terminal
vte = "0.11"
# From file_manager & manager
walkdir = "2.5"
# From manager
zip = "2.2"
# --- END PLUGIN DEPENDENCIES ---

[features]
default = ["plugin_code_editor", "plugin_file_manager", "plugin_manager", "plugin_modeling", "plugin_terminal", "plugin_test_plugin"]
plugin_code_editor = []
plugin_file_manager = []
plugin_manager = []
plugin_modeling = []
plugin_terminal = []
plugin_test_plugin = []
# --- END PLUGIN FEATURES ---

[build-dependencies]
toml = "0.8"
